# StockAnalyzer

./: .cursorrules  .gitignore  .pre-commit-config.yaml  JUPYTEXT_AUTO_SYNC_GUIDE.md  Makefile  README.md  VERIFICATION_GUIDE.md  jupytext.toml  progress.md  pyproject.toml  requirements.txt  test_actual_workflow.py  test_temp_model.joblib  verify_implementation.py
.cursor/rules/: data-flow-pipeline.mdc  data-models-patterns.mdc  hk-market-rules.mdc  pattern-recognition-algorithms.mdc
.giga/: specifications.json
Docs/: ARCHITECTURE.md  PROGRESS.md  PROJECT_REVIEW.md  Product_Specs.md  README.md  bulk_fetching_guide.md  notebook_performance_fix.md
Docs/legacy/: progress-full.md
Docs/user_story/: story_1.2.md  story_1.3.md  story_1.3_implementation_summary.md  story_1.4.md  story_1.5_implementation_summary.md  story_2.1.md  story_2.2.md
data/: 0700_HK.csv
examples/: bulk_fetch_examples.py  feature_extraction_example.py  pattern_match_visualization_example.py  pattern_scanning_example.py
labels/: labeled_patterns.json
models/: model_randomforest_20250622_184321.pkl  model_randomforest_20250622_185029.pkl  model_xgboost_20250622_184320.pkl  model_xgboost_20250622_185028.pkl
notebooks/: 00_workflow_index.ipynb  00_workflow_index.py  01_data_collection.ipynb  01_data_collection.py  02_advanced_data_collection.ipynb  02_advanced_data_collection.py  02_basic_data_collection.ipynb  02_basic_data_collection.py  02_bulk_data_collection.ipynb  02_bulk_data_collection.py  02_bulk_data_collection_improved.ipynb  02_bulk_data_collection_improved.py  03_quick_output_test.ipynb  03_quick_output_test.py  04_feature_extraction.ipynb  04_feature_extraction.py  05_pattern_model_training.ipynb  05_pattern_model_training.py  06_interactive_demo.ipynb  06_interactive_demo.py  06_pattern_scanning.ipynb  06_pattern_scanning.py  07_pattern_match_visualization.ipynb  07_pattern_match_visualization.py  07_pattern_match_visualization_test.ipynb  07_pattern_match_visualization_test.py  08_signal_outcome_tagging.ipynb  08_signal_outcome_tagging.py  NOTEBOOK_CONVERSION_GUIDE.md  README.md  README_notebook_workflow.md  bulk_data_collection_analysis.md  common_setup.py  pattern_backtest.py  pattern_examples.py  pattern_labeling_demo.ipynb  pattern_labeling_demo.py  test_data_collection.ipynb  test_data_collection.py  test_data_collection_fixed.ipynb  (+3 more)
notebooks/archived/: 02_advanced_data_collection.ipynb  02_advanced_data_collection.py  02_basic_data_collection.ipynb  02_basic_data_collection.py  02_bulk_data_collection.ipynb  02_bulk_data_collection_improved.ipynb
notebooks/core_workflow/: 00_workflow_index.ipynb  00_workflow_index.py  01_data_collection.ipynb  01_data_collection.py  02_data_collection_enterprise.py  02_data_collection_starter.py  03_feature_extraction.ipynb  03_feature_extraction.py  04_pattern_training.ipynb  05_pattern_detection.ipynb  06_interactive_analysis.ipynb  06_interactive_analysis.py  07_visualization.ipynb  07_visualization.py  08_signal_analysis.ipynb
notebooks/data/: 0005_HK.csv  0016_HK.csv  0017_HK.csv  0388_HK.csv  0700_HK.csv  0823_HK.csv  0883_HK.csv  0939_HK.csv  0941_HK.csv  1024_HK.csv  1113_HK.csv  1299_HK.csv  1398_HK.csv  2318_HK.csv  2388_HK.csv  3690_HK.csv  3988_HK.csv  9618_HK.csv  9988_HK.csv  9999_HK.csv
notebooks/examples/: pattern_labeling_tutorial.ipynb  quick_start_demo.py
notebooks/labels/: labeled_patterns.json
notebooks/utilities/: README.md  common_setup.py  notebook_setup.py  quick_fix.py
scripts/: com.stockanalyze.jupytext.plist  install_auto_sync.sh  sync_notebooks.sh  test_yfinance_compatibility.py  uninstall_auto_sync.sh  watch_and_sync.sh  watch_and_sync_daemon.sh
src/: __init__.py  bulk_collection_improved.py  bulk_data_fetcher.py  data_fetcher.py  data_quality_analyzer.py  feature_extractor.py  hk_stock_universe.py  interactive_pattern_analyzer.py  notebook_widgets.py  pattern_labeler.py  pattern_model_trainer.py  pattern_visualizer.py  technical_indicators.py
src/stock_analyzer/: __init__.py  cli.py
src/stock_analyzer/utils/: __init__.py  errors.py  notebook.py
stock_analyzer/: __init__.py  config.py
stock_analyzer/analysis/: __init__.py  backtester.py  evaluator.py  interactive.py  outcome.py  quality.py  strategy.py  trainer.py
stock_analyzer/features/: __init__.py  extractor.py  indicators.py
stock_analyzer/patterns/: __init__.py  labeler.py  scanner.py
stock_analyzer/utils/: __init__.py  notebook.py  widgets.py
stock_analyzer/visualization/: __init__.py  charts.py
strategies/: example_bear_flag.yaml
tests/: __init__.py  test_cli.py  test_data_fetcher.py  test_feature_extractor.py  test_imports.py  test_interactive_demo.py  test_model_evaluator.py  test_pattern_labeler.py  test_pattern_match_visualizer.py  test_pattern_model_trainer.py  test_pattern_scanner.py  test_pattern_visualizer.py  test_signal_outcome_tagger.py  test_signal_store.py  test_strategy.py  test_technical_indicators.py  test_visualization_integration.py
tests/config/: __init__.py  test_config_standalone.py  test_env_override.py
tests/integration/: 07_pattern_match_visualization_test.ipynb  test_data_collection.ipynb  test_data_collection_fixed.ipynb
